--- a/less/styles.less
+++ b/less/styles.less
@@ -81,6 +81,7 @@ body {
   justify-content: flex-start;
   padding-left: 43px;
   width: 180px;
+  text-align: center;
 }
 
 .button:active,
@@ -129,6 +130,6 @@ input:focus {
   }
  #zero,
 .button.sin {
-    width: 100px;
+    width: 80px;
 }
 }
