--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,7 @@ body {
   justify-content: flex-start;
   padding-left: 43px;
   width: 180px;
+  text-align: center;
 }
 .button:active,
 .button:focus {
@@ -111,6 +112,6 @@ input:focus {
   }
   #zero,
   .button.sin {
-    width: 100px;
+    width: 80px;
   }
 }
