--- a/less/styles.less
+++ b/less/styles.less
@@ -38,7 +38,7 @@ body {
   text-align: right;
   justify-content: flex-start;
   margin: 30px;
-  width: 95%;
+  overflow-y: scroll;
   height: 80px;
   background: none;
   color: @bottom-color;
@@ -80,7 +80,7 @@ body {
   grid-column: 1 / span 2;
   justify-content: flex-start;
   padding-left: 43px;
-  width: 180px;
+  width: 160px;
   text-align: center;
 }
 
